SERVER-62394: Follow-up work for SERVER-61131